# taxi-demand-prediction

./: pyproject.toml
.github/workflows/: feature_pipeline.yaml
data/transformed/: ts_data_2022_01.parquet
notebooks/: 12_feature_pipeline.ipynb  13_model_training_pipeline.ipynb
src/: config.py  frontend.py  inference.py
