[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Karthikeya Pervela <pervela.karthikeya@gmail.com>"]
readme = "README.md"
packages = [
            {include = "src"}
            ]


[tool.poetry.dependencies]




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"